--- a/LinearModel.Rmd
+++ b/LinearModel.Rmd
@@ -35,7 +35,7 @@ predict(model1, specificdata1, interval="prediction")
 cor(mydata$SIMS, mydata$ARM)
 ```
 
-The 95% prediction interval for the prediction of SIMS by ARM at the specific value of GRIP=94 ARM=88, has a prediction range between -1.726209 and 3.138977 with a total prediction range of: 4.865186.
+The 95% prediction interval for the prediction of SIMS by ARM at the specific value of GRIP=94 ARM=88, has a prediction range between -1.726209 and 3.138977 with a total prediction range of: 4.865186. This is the second smallest prediction range of any of the models, making it the second best predictor of the SIMS value at the given point of ARM = 88 and GRIP = 94.
 
 ```{r}
 model2 <- lm(SIMS~GRIP,data=mydata)
@@ -43,20 +43,22 @@ plot(SIMS~GRIP,data=mydata, main= "SIMS vs GRIP")
 abline(model2)
 specificdata2 <- data.frame(GRIP = 94, ARM = 88)
 predict(model2, specificdata2, interval="prediction")
-cor(mydata$SIMS, mydata$GRIP)
 ```
 
-The 95% prediction interval for the prediction of SIMS by GRIP at the specific value of GRIP=94 ARM=88, has a prediction range between -3.107961 and 2.035652 with a total prediction range of: 5.143613.
+The 95% prediction interval for the prediction of SIMS by GRIP at the specific value of GRIP=94 ARM=88, has a prediction range between -3.107961 and 2.035652 with a total prediction range of: 5.143613. This is the largest prediction range of any of the models, making it the worst predictor of the SIMS value at the given point of ARM = 88 and GRIP = 94.
 
 ```{r}
 model3 <- lm(SIMS~ARM + GRIP,data=mydata)
 avPlots(model3)
 specificdata3 <- data.frame(GRIP = 94, ARM = 88)
 predict(model3, specificdata3, interval="prediction")
+cor(mydata$SIMS~mydata$ARM + GRIP)
 ```
 
-The 95% prediction interval for the prediction of SIMS by the combination of ARMS and GRIP at the specific value of GRIP=94 ARM=88, has a prediction range between -2.132373 and 2.431668 with a total prediction range of: 4.564041. 
+The 95% prediction interval for the prediction of SIMS by the combination of ARMS and GRIP at the specific value of GRIP=94 ARM=88, has a prediction range between -2.132373 and 2.431668 with a total prediction range of: 4.564041. This is the smallest prediction range of any of the models, making it the best predictor of the SIMS value at the given point of ARM = 88 and GRIP = 94.
 
 ```{r}
 anova(model1,model3)
 ```
+
+
